--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <span data-error="First Name cannot be empty" id="firstname-span">
             <input
               type="text"
-              name="name"
+              name="firstname"
               id="firstname"
               placeholder="First Name"
             />
@@ -35,7 +35,7 @@
           <span data-error="Last Name cannot be empty" id="lastname-span">
             <input
               type="text"
-              name="name"
+              name="lastname"
               id="lastname"
               placeholder="Last Name"
             />
@@ -43,7 +43,7 @@
           <span data-error="Looks like this is not an email" id="email-span">
             <input
               type="email"
-              name="name"
+              name="email"
               id="email"
               placeholder="Email Address"
             />
@@ -51,7 +51,7 @@
           <span data-error="Password cannot be empty" id="password-span">
             <input
               type="password"
-              name="name"
+              name="password"
               id="password"
               placeholder="Password"
             />
