--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
               type="text"
               id="firstname"
               placeholder="First Name"
+              aria-label="First Name"
             />
           </span>
           <span data-error="Last Name cannot be empty" id="lastname-span">
@@ -36,12 +37,14 @@
               type="text"
               id="lastname"
               placeholder="Last Name"
+              aria-label="Last Name"
             />
           </span>
           <span data-error="Looks like this is not an email" id="email-span">
             <input
               type="email"
               id="email"
+              aria-label="Email Address"
               placeholder="Email Address"
             />
           </span>
@@ -50,6 +53,7 @@
               type="password"
               id="password"
               placeholder="Password"
+              aria-label="Password"
             />
           </span>
           <span>
